2002-08-28  Marcus Brinkmann  <marcus@gnu.org>

	* display.c (display_output_one): Also set USER->cursor.status to
	normal for ECMA-48 <RIS> (hard reset).

2002-08-23  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (DIST_FILES): New variable.
	* hurd.ti: New file describing the terminal capabilities of the
	Hurd console server.

2002-08-22  Marcus Brinkmann  <marcus@gnu.org>

	* console.h: Move file to ../hurd/.
	* Makefile (LCLHDRS): Remove console.h.
	* display.c: Include <hurd/console.h> instead "console.h".
	* console.c: Likewise.

	* display.h: Add prototype for display_get_size.
	* display.c (display_get_size): New function.
	(nowait_file_changed): Update for new interfaces.
	* console.c (new_node): Use display_get_size to retrieve size of
	display node.
	(netfs_get_dirents): Initialize FIRST_VCONS to silence gcc warning.

2002-07-15  Marcus Brinkmann  <marcus@gnu.org>

	* display.c: Restore copyright notice until the papers by Kalle
	are actually received.

2002-06-27  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (MIGSTUBS): Add fs_notifyUser.o.
	(MIGSFLAGS): New variable.
	* console.c: Include "fs_notify_U.h".
	(struct modreq): New structure.
	(struct cons): New members DIRMOD_REQS and DIRMOD_TICK.
	(cons_notice_dirchange): New function.
	(vcons_lookup): Call cons_notice_dirchange.
	(netfs_S_dir_notice_changes): New function.
	(main): Initialize new members in CONS.
	* display.c (nowait_file_changed): Update to new interface (new
	argument TICKNO).
	(do_mach_notify_msg_accepted): Call nowait_file_changed with new argument.
	(display_notice_changes): Likewise.
	(display_notice_filechange): Likewise.
	
2002-06-25  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (HURDLIBS): Add pager, reported by Alfred M. Szmidt.

	* display.c (screen_shift_left): Don't increase DST twice in one
	iteration.
	* display.c (screen_shift_right): Likewise.

2002-06-25  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (LCLHDRS): Add priv.h and mutations.h.