@@ -1,3 +1,7 @@
+2002-08-28  Marcus Brinkmann  <marcus@gnu.org>
+
+	* console.h (struct cons_display): Fix comment on CUR_LINE.
+
 2002-08-22  Marcus Brinkmann  <marcus@gnu.org>
 
 	* console.h: Move here from ../console/.
