@@ -1,3 +1,13 @@
+2002-08-28  Marcus Brinkmann  <marcus@gnu.org>
+
+	* file-changed.c (cons_S_file_changed): Take NEW_CUR_LINE modulo
+	VCONS->state.screen.lines where appropriate.  Adapt calculation of
+	SCROLLING, and limit it to the screen size.
+	Only scroll at all if there is something to scroll.
+	Fix calculation of scrolled-in area.
+	* vcons-refresh.c (cons_vcons_refresh): Take
+	VCONS->state.screen.cur_line modulo VCONS->state.screen.lines.
+
 2002-08-22  Marcus Brinkmann  <marcus@gnu.org>
 
 	* demuxer.c, init-init.c, init-loop.c, opts-version.c,
